# USTC_CG_24

Framework2D/include/view/: comp_canvas.h
Framework2D/include/view/shapes/: ellipse.h  polygon.h  rect.h
Framework2D/src/: CMakeLists.txt
Framework2D/src/assignments/1_MiniDraw/: window_minidraw.cpp
Framework2D/src/saleri/: CMakeLists.txt  saleri_demo.cpp  saleri_window.cpp  saleri_window.h
Framework2D/src/saleri/shapes/: Line.cpp  Line.h
Framework2D/src/view/: comp_canvas.cpp
Framework2D/src/view/shapes/: ellipse.cpp  polygon.cpp
